unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account the snapshot was linked to as of when the snapshot was created. This will not change on older snapshots if the Account field is changed on the opportunity itself.</description>
    <label>Snapshot Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>