unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>Amount_Change__c</fullName>
    <formula>Current_Opportunity_Amount__c - Snapshot_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>