unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Amount_Change_Absolute_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Change_Absolute_Value__c</fullName>
    <formula>ABS(Current_Opportunity_Amount__c - Snapshot_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Change (Absolute Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>