unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_ACV__c.field-meta.xml
<CustomField>
    <fullName>Current_ACV__c</fullName>
    <description>Current value from the ACV (ACVH__c) field on the opportunity</description>
    <formula>Opportunity__r.ACVH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ACV (ACVH__c) field on the opportunity</inlineHelpText>
    <label>Current ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>