unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Close_Date_Q__c.field-meta.xml
<CustomField>
    <fullName>Current_Close_Date_Q__c</fullName>
    <formula>TEXT(YEAR( Opportunity__r.CloseDate ))&amp;&quot; &quot;&amp;CASE(MONTH( Opportunity__r.CloseDate),
1,&quot;Q1&quot;,2,&quot;Q1&quot;,3,&quot;Q1&quot;,4,&quot;Q2&quot;,5,&quot;Q2&quot;,6,&quot;Q2&quot;,7,&quot;Q3&quot;,8,&quot;Q3&quot;,9,&quot;Q3&quot;,10,&quot;Q4&quot;,11,&quot;Q4&quot;,12,&quot;Q4&quot;,&quot;?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Close Date Q</label>
    <type>Text</type>
</CustomField>