unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Deal_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Current_Deal_Forecast__c</fullName>
    <formula>TEXT( Opportunity__r.Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Deal Forecast</label>
    <type>Text</type>
</CustomField>