unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Deal_Type__c</fullName>
    <formula>TEXT ( Opportunity__r.Deal_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Deal Type</label>
    <type>Text</type>
</CustomField>