unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_FSR_Credit_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Current_FSR_Credit_Roll_Up__c</fullName>
    <formula>Opportunity__r.Field_Sales_Rep__r.FirstName + &#39; &#39; + Opportunity__r.Field_Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current FSR Credit Roll Up</label>
    <type>Text</type>
</CustomField>