unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Amount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>