unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Owner</label>
    <type>Text</type>
</CustomField>