unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Opportunity_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Owner_Division__c</fullName>
    <formula>Opportunity__r.Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Owner Division</label>
    <type>Text</type>
</CustomField>