unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Owner_Role__c</fullName>
    <formula>Opportunity__r.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Owner: Role</label>
    <type>Text</type>
</CustomField>