unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Pipeline_Status__c</fullName>
    <formula>Opportunity__r.Pipeline_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Pipeline Status</label>
    <type>Text</type>
</CustomField>