unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <formula>TEXT (Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage</label>
    <type>Text</type>
</CustomField>