unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Days_Since_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Snapshot__c</fullName>
    <description>Subtracts date of snapshot from current date. This makes is easy to pull snapshots from yesterday or one week ago by filtering by 1 or 7 in this field.</description>
    <formula>TODAY() - Snapshot_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>