unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Forecast_Change__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Change__c</fullName>
    <formula>IF (
Current_Forecast__c - Snapshot_Forecast_Number__c = 0,
&quot;No Change&quot;,
IF ( Current_Forecast__c - Snapshot_Forecast_Number__c &lt; 0,
&quot;Moved Backward&quot;,
IF ( Current_Forecast__c - Snapshot_Forecast_Number__c &gt; 0,
&quot;Moved Forward&quot;,
&quot;-&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Change</label>
    <type>Text</type>
</CustomField>