unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Historical_Forecast_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Historical_Forecast_In_Out__c</fullName>
    <label>Historical Forecast In/Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>