unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/New_Upsell_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>New_Upsell_Pipeline__c</fullName>
    <formula>IF(
AND(
NOT(CONTAINS(Snapshot_Stage__c, &quot;Closed&quot;)),
OR(
Snapshot_Deal_Type__c = &quot;New Business&quot;,
Snapshot_Deal_Type__c = &quot;Add-on&quot;,
Snapshot_Deal_Type__c = &quot;Upgrade&quot;
)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New / Upsell Pipeline?</label>
    <type>Checkbox</type>
</CustomField>