unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>