unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Opportunity ID of the opp being recorded on this snapshot. ID value will remain on the snapshot even if the opportunity is later deleted.</description>
    <label>Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>