unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Name of the person that owned this opp on day of snapshot. Recorded as text only.</description>
    <label>Snapshot Opportunity Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>