unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Snapshot Product Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>