unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Role_of_the_user_that_owns_the_opportuni__c.field-meta.xml
<CustomField>
    <fullName>Role_of_the_user_that_owns_the_opportuni__c</fullName>
    <description>Record type of the opportunity as of the day of this snapshot.</description>
    <label>Role of the user that owns the opportuni</label>
    <length>100</length>
    <type>Text</type>
</CustomField>