unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Account_ID__c</fullName>
    <label>Snapshot Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>