unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_ACV__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_ACV__c</fullName>
    <description>ACV of the opp as of day of snapshot.</description>
    <label>Snapshot ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>