unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Adjusted_Age__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Adjusted_Age__c</fullName>
    <formula>IF(
CONTAINS(Snapshot_Stage__c, &quot;Closed&quot;),
Snapshot_Close_Date__c - Snapshot_Adjusted_Created_Date__c,
Snapshot_Date__c - Snapshot_Adjusted_Created_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Adjusted Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>