unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Adjusted_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Adjusted_Created_Date__c</fullName>
    <formula>IF(
ISBLANK(Snapshot_Promoted_Date__c),
DATEVALUE(Snapshot_Opportunity_Created_Date__c),
Snapshot_Promoted_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Adjusted Created Date</label>
    <type>Date</type>
</CustomField>