unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_AM_Credit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_AM_Credit__c</fullName>
    <description>Name of user listed as the AM Credit field on the opportunity as of day of snapshot.</description>
    <label>Snapshot AM Credit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>