unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Amount__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Amount__c</fullName>
    <description>Amount of the opportunity as of day of snapshot.</description>
    <label>Snapshot Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>