unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_and_Current_Close_Date_Q_Match__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_and_Current_Close_Date_Q_Match__c</fullName>
    <formula>IF ( Current_Close_Date_Q__c = Snapshot_Close_Date_Q__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot and Current Close Date Q Match?</label>
    <type>Text</type>
</CustomField>