unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_App_Cloud_Edition__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_App_Cloud_Edition__c</fullName>
    <description>App Cloud Edition from opportunity as of day of snapshot.</description>
    <label>Snapshot App Cloud Edition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>