unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_App_Cloud_Total__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_App_Cloud_Total__c</fullName>
    <description>App Cloud Total as of day of snapshot.</description>
    <label>Snapshot App Cloud Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>