unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_APV__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_APV__c</fullName>
    <description>APV of the opp as of the day of snapshot.</description>
    <label>Snapshot APV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>