unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Close_Date__c</fullName>
    <description>Close Date of opportunity as of the day of snapshot.</description>
    <label>Snapshot Close Date</label>
    <type>Date</type>
</CustomField>