unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Count__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>