unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Country__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Country__c</fullName>
    <description>Country from opportunity as of day of snapshot.</description>
    <label>Snapshot Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>