unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Date this snapshot was created. Normally this will be interchangeable with the Created Date of the snapshot record, but this field will be useful if we need to manipulate our data at all.</description>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>