unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Day_of_the_Week__c</fullName>
    <formula>CASE(
MOD(Snapshot_Date__c - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;, &quot;-&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Day of the Week</label>
    <type>Text</type>
</CustomField>