unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Deal_Type__c</fullName>
    <description>Deal Type of the opportunity as of day of snapshot.</description>
    <label>Snapshot Deal Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>