unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Existing_MRR__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Existing_MRR__c</fullName>
    <description>Existing MRR of opportunity on day of snapshot.</description>
    <label>Snapshot Existing MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>