unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Forecast__c</fullName>
    <description>Forecast of the deal on the day of snapshot.</description>
    <label>Snapshot Forecast</label>
    <length>100</length>
    <type>Text</type>
</CustomField>