unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Forecast_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Forecast_In_Out__c</fullName>
    <formula>TEXT(Opportunity__r.Commit_In_Out__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Forecast In/Out</label>
    <type>Text</type>
</CustomField>