unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Forecast_Number__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Forecast_Number__c</fullName>
    <description>Assigns the forecast categories Pipeline, Upside, Commit with the numbers 1,2, 3. Used to create formula field to see see if an opp has more forward, backward, or stayed the same since any given snapshot.</description>
    <formula>/* Assigns the forecast categories Pipeline, Upside, Commit with the numbers 1,2, 3. Used to create formula field to see see if an opp has more forward, backward, or stayed the same since any given snapshot. */

CASE ( Snapshot_Forecast__c ,
&quot;Pipeline&quot;, 1,
&quot;Upside&quot;, 2,
&quot;Commit&quot;, 3,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Forecast #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>