unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_FSR_Credit_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_FSR_Credit_Roll_Up__c</fullName>
    <description>Name of the user listed as FSR Credit Roll Up as of day of snapshot. Stored as text only.</description>
    <label>Snapshot FSR Credit Roll Up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>