unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_MRR_Commit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_MRR_Commit__c</fullName>
    <description>MRR Commit value of the opp as of the day of snapshot.</description>
    <label>Snapshot MRR Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>