unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_New_MRR__c</fullName>
    <label>Snapshot New MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>