unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Opportunity_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Business_Unit__c</fullName>
    <label>Snapshot Opportunity Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>