unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Created_Date__c</fullName>
    <description>Date/time the opportunity was created. This is fixed on the opportunity, but recorded here so this info is not lost if the opportunity is deleted.</description>
    <label>Snapshot Opportunity Created Date</label>
    <type>DateTime</type>
</CustomField>