unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Name__c</fullName>
    <description>Name of the opportunity as day of snapshot. This can change, so snapshots from the same opp may have different values in this field.</description>
    <label>Snapshot Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>