unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Owner_Role__c</fullName>
    <description>Role of the user that owns the opportunity on day snapshot is taken. This value can change even if the owner stays the same if the user&#39;s role is later changed.</description>
    <label>Snapshot Opportunity Owner: Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>