unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Record_Type__c</fullName>
    <label>Snapshot Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>