unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Owner_Division__c</fullName>
    <description>Division of the user that owned this record on day of snapshot.</description>
    <label>Snapshot Owner: Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>