unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Owner_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Owner_Sub_Division__c</fullName>
    <label>Snapshot Owner: Sub-Division</label>
    <length>25</length>
    <type>Text</type>
</CustomField>