unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Partner_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Partner_Engagement__c</fullName>
    <description>Partner Engagement of opp as of day of snapshot.</description>
    <label>Snapshot Partner Engagement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>