unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Partner_s_Involved__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Partner_s_Involved__c</fullName>
    <description>Was a partner involved in the opportunity?</description>
    <label>Snapshot Partner(s) Involved</label>
    <length>25</length>
    <type>Text</type>
</CustomField>