unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Pipeline_Status__c</fullName>
    <formula>IF (
CONTAINS(Snapshot_Stage__c ,&quot;Closed&quot;),
IF (Snapshot_Stage__c = &quot;Closed Won&quot;, &quot;Closed Won&quot;, &quot;Closed Lost&quot;),
Snapshot_Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Pipeline Status</label>
    <type>Text</type>
</CustomField>