unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Promoted_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Promoted_Date__c</fullName>
    <label>Snapshot Promoted Date</label>
    <type>Date</type>
</CustomField>