unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Pub_Contract_Term_Y1__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Pub_Contract_Term_Y1__c</fullName>
    <description>Value of Pub Contract Terms (months) field on opp as of day of snapshot.</description>
    <label>Snapshot Pub Contract Term Y1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>