unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Pub_Contract_Term_Y2__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Pub_Contract_Term_Y2__c</fullName>
    <description>Pub Contract Terms Y2 (months) as of day of snapshot.</description>
    <label>Snapshot Pub Contract Term Y2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>