unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Related_Renewal_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Related_Renewal_Opportunity_ID__c</fullName>
    <description>ID of the related renewal opportunity if the opp is a renewal growth add-on.</description>
    <label>Snapshot Related Renewal Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>