unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Renewing_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Renewing_Contract_ID__c</fullName>
    <description>ID of the renewing contract related to the opp on day of snapshot (if any).</description>
    <label>Snapshot Renewing Contract ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>