unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Renewing_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Renewing_Contract_Name__c</fullName>
    <description>Unique contract name of the renewing contract related to the opp on the day of the snapshot (if any).</description>
    <label>Snapshot Renewing Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>