unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Renewing_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Renewing_Contract_Number__c</fullName>
    <description>Unique Salesforce number (eg 00008228) assigned to the renewing contract related to the opp on the day of the snapshot (if any).</description>
    <label>Snapshot Renewing Contract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>