unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Services_Total__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Services_Total__c</fullName>
    <description>Services total on opportunity as of day of snapshot.</description>
    <label>Snapshot Services Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>