unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Stage__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Stage__c</fullName>
    <description>Stage of the opp as of day of snapshot.</description>
    <label>Snapshot Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>