unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_State_Province__c</fullName>
    <description>US State or Canadian province on opportunity as of day of snapshot.</description>
    <label>Snapshot State / Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>