unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_TCV__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_TCV__c</fullName>
    <description>TCV of the opp as of the day of snapshot.</description>
    <label>Snapshot TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>