unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Total_ACV__c</fullName>
    <label>Snapshot Total ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>