unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Video_Cloud_Edition__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Video_Cloud_Edition__c</fullName>
    <description>Video Cloud Edition as of day of snapshot.</description>
    <label>Snapshot Video Cloud Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>