unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Weighted_Age__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Weighted_Age__c</fullName>
    <formula>Snapshot_Adjusted_Age__c * Snapshot_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Weighted Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>