unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Snapshot_Zencoder_Total__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Zencoder_Total__c</fullName>
    <description>Zencoder Total as of day of snapshot.</description>
    <label>Snapshot Zencoder Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>