unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/SnapshotRelated_Renewal_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>SnapshotRelated_Renewal_Opportunity_Name__c</fullName>
    <description>Name of the related renewal opportunity if the opportunity is a renewal growth add-on. Stored as text only.</description>
    <label>Snapshot Related Renewal Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>