unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Unique_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opportunity_Name__c</fullName>
    <formula>Opportunity__r.Name + &quot; (&quot; + CASESAFEID(Opportunity__r.Id) +&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Opportunity Name</label>
    <type>Text</type>
</CustomField>