unpackaged/main/default/objects/Opportunity_Snapshot__c/fields/Zencoder_Edition__c.field-meta.xml
<CustomField>
    <fullName>Zencoder_Edition__c</fullName>
    <description>Zencoder Edition as of day of snapshot.</description>
    <label>Snapshot Zencoder Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>